# ros-socket

socket/: sock_client_ros.cpp  sock_server.cpp
socket/sock_ws/devel/: .catkin  .rosinstall  setup.sh
socket/sock_ws/devel/lib/pkgconfig/: socket_sample.pc
socket/sock_ws/devel/lib/socket_sample/: socket_sample
socket/sock_ws/devel/share/socket_sample/cmake/: socket_sampleConfig.cmake
socket/sock_ws/src/socket_sample/: CMakeLists.txt  CMakeLists.txt~
socket/sock_ws/src/socket_sample/src/: ros_client.cpp
